--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
     <div class="py-4 flex lg:flex-row flex-col lg:justify-between justify-center items-center w-full gap-y-4">
       <h2 class="text-sm order-3 lg:order-1">© 2022 RØDE All Rights Reserved.</h2>
       <div class="flex justify-center items-center gap-x-2 order-1 lg:order-2">
-        <h6 class="text-sm text-gray-600 hover:text-black">Privacy Policy</h6>
+        <h6 class="text-sm text-gray-600 hover:text-black cursor-pointer">Privacy Policy</h6>
         <div class="h-4 w-0.5 bg-gray-500"></div>
-        <h6 class="text-sm text-gray-600 hover:text-black">Terms & Conditions</h6>
+        <h6 class="text-sm text-gray-600 hover:text-black cursor-pointer">Terms & Conditions</h6>
       </div>
       <div class="flex justify-center items-center gap-x-4 order-2 lg:order-3">
         <a class="text-yellow text-2xl"href="#"><i class="fa-brands fa-facebook"></i></a>
